Release 1.2.1: Upgrade to Kotlin 2.1.20, Gradle 8.14, JDK 17, AORM 1.1.18